--- a/GalleryMVC_With_Auth/Content/Site.css
+++ b/GalleryMVC_With_Auth/Content/Site.css
@@ -3,6 +3,10 @@
     padding-bottom: 20px;
 }
 
+footer {
+    color: gray;
+}
+
 /*.navbar-inverse .navbar-brand:hover, .navbar-inverse .navbar-brand {
     color: #E18728;
 }*/
