--- a/GalleryMVC_With_Auth/Content/transp_menu.css
+++ b/GalleryMVC_With_Auth/Content/transp_menu.css
@@ -106,17 +106,9 @@ footer p{
 }
 
 .splash {
-    /*padding: 9em 0 2em;*/
     padding: 3em 0 2em;
-    /*background-color: #141d27;*/
-    background-color: white;
-    /*background-image: url('bg2_opt_mon.jpg');*/
-    /*filter: grayscale(100%);*/
+    background-color: rgb(46, 46, 46);
     background-size: cover;
-    /*background-position:bottom center;*/
-    /*background-repeat: no-repeat;*/
-    background-attachment: fixed;
-    color: #fff;
     text-align: center;
 }
 
