Refactoring: error pages text

--- a/GalleryMVC_With_Auth/Views/Errors/NotFound.cshtml
+++ b/GalleryMVC_With_Auth/Views/Errors/NotFound.cshtml
@@ -1,8 +1,7 @@
-﻿@model Exception
-@{
+﻿@{
     ViewBag.Title = "NotFound";
 }
 
 <h2>NotFound</h2>
 
-@Model.Message
+К сожалению страница не найдена ='(
