--- a/GalleryMVC_With_Auth/Views/Account/Register.cshtml
+++ b/GalleryMVC_With_Auth/Views/Account/Register.cshtml
@@ -1,6 +1,10 @@
-﻿@model GalleryMVC_With_Auth.Models.RegisterViewModel
+﻿@using Microsoft.AspNet.Identity.EntityFramework
+@model GalleryMVC_With_Auth.Models.RegisterViewModel
 @{
     ViewBag.Title = "Register";
+    //List<IdentityRole> lst = ViewBag.tmp;
+    //List<IdentityRole> lst2 = ViewBag.tmp2;
+    //var db = lst2;
 }
 
 <h2>@ViewBag.Title.</h2>
@@ -29,6 +33,15 @@
             @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control" })
         </div>
     </div>
+    <!--Select the Role Type for the User-->
+    <div class="form-group">
+        @Html.Label("Select Your User Type", new { @class = "col-md-2 control-label" })
+        <div class="col-md-10">
+            @*@Html.DropDownListFor(r=>r.Name, new SelectList(db,"Name","Name"))*@
+            @Html.DropDownList("Name")
+        </div>
+    </div>
+    <!--Ends Here-->
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
             <input type="submit" class="btn btn-default" value="Register" />
