fix: EF Picture model

--- a/GalleryMVC_With_Auth/Views/Images/Jivopis.cshtml
+++ b/GalleryMVC_With_Auth/Views/Images/Jivopis.cshtml
@@ -5,6 +5,10 @@
 
 <h2>@ViewBag.Title</h2>
 
+@foreach (var p in Model)
+{
+    @p.Path
+}
 <div class="grid">
     
     @for (int i = 0; i < Directory.GetFiles(Server.MapPath("/Content/images/zivopis/kondratuk_alina")).Length; i++)
