--- a/GalleryMVC_With_Auth/Views/Images/Jivopis.cshtml
+++ b/GalleryMVC_With_Auth/Views/Images/Jivopis.cshtml
@@ -6,7 +6,7 @@
 <h2>@ViewBag.Title</h2>
 
 
-<div id="blueimp-gallery" class="blueimp-gallery">
+<div id="blueimp-gallery" class="blueimp-gallery blueimp-gallery-controls">
     <div class="slides"></div>
     <h3 class="title"></h3>
     <a class="prev">‹</a>
@@ -33,9 +33,8 @@
 <div id="links">
     @foreach (var p in Model)
 {
-
-        <a href="@p.Path" title="@p.Name">
-            <img src="@p.Path" alt="@p.Tag" />
-        </a>
+    <a href="@p.Path" title="@p.Name">
+        <img src="@p.Path" alt="@p.Tag" style="width: 250px; height: 250px; margin-right: 2.5px; margin-bottom: 5px;"/>
+    </a>
 }
 </div>
