Refactoring: thumbnails to image preview

--- a/GalleryMVC_With_Auth/Views/Images/Jivopis.cshtml
+++ b/GalleryMVC_With_Auth/Views/Images/Jivopis.cshtml
@@ -35,7 +35,7 @@
         @foreach (var p in Model)
         {
             <figure class="effect-milo">
-                <img src="@p.Path" alt="@p.Category" />
+                <img src="@p.TmbPath" alt="@p.Category" />
                 <figcaption>
                     <h2><span>@p.Category</span></h2>
                     <p style="color: red">Автор - @p.Name.</p>
