Fix: links in homepage

--- a/GalleryMVC_With_Auth/Views/StartHome/Index.cshtml
+++ b/GalleryMVC_With_Auth/Views/StartHome/Index.cshtml
@@ -8,7 +8,7 @@
         <figcaption>
             <h2><span>Живопись</span></h2>
             <p>Живопись - это искусство!</p>
-            <a href="~/Images/Jivopis">Открыть живопись</a>
+            <a href="~/Images/Painting">Открыть живопись</a>
         </figcaption>
     </figure>
     <!-- ... -->
@@ -17,7 +17,7 @@
         <figcaption>
             <h2><span>Акварель</span></h2>
             <p>Акварель - тоже вещь!</p>
-            <a href="~/Images/Akvarel">View more</a>
+            <a href="~/Images/Watercolor">View more</a>
         </figcaption>
     </figure>
     <!-- ... -->
@@ -35,7 +35,7 @@
         <figcaption>
             <h2><span>Графика</span></h2>
             <p>Масло - ага,именно то самое о котором вы подумали!</p>
-            <a href="~/Images/Grafica">View more</a>
+            <a href="~/Images/Graphics">View more</a>
         </figcaption>
     </figure>
     <!-- ... -->
