--- a/GalleryMVC_With_Auth/Views/AdminPanel/Upload.cshtml
+++ b/GalleryMVC_With_Auth/Views/AdminPanel/Upload.cshtml
@@ -1,4 +1,4 @@
-﻿@model GalleryMVC_With_Auth.Domain.Entities.Picture
+﻿
 
 @{
     ViewBag.Title = "Upload";
@@ -6,21 +6,17 @@
 
 <h2>Upload</h2>
 
-@using (Html.BeginForm())
+@using (Html.BeginForm("Upload", "AdminPanel", FormMethod.Post, new { enctype = "multipart/form-data" }))
 {
-    <title>Path</title>
-    @Html.TextBox("path")<p/>
-    <title>TmbPath</title>
-    @Html.TextBox("tmbpath")<p/>
-    <title>Name</title>
-    @Html.TextBox("name")<p/>
-    <title>Desctiption</title>
-    @Html.TextBox("desc")<p/>
-    <title>Tag</title>
-    @Html.TextBox("tag")<p/>
-    <title>Category</title>
-    @Html.TextBox("cat")<p/>
-    <title>Price</title>
-    @Html.TextBox("prc",null,new {type = "number"})<p/>
+    <input type="file" name="file" id="file" style="width: 100%;" /><p />
+    <h5>Name</h5>
+    @Html.TextBox("name")<p />
+    <h5>Desctiption</h5>
+    @Html.TextBox("desc")<p />
+    <h5>Tag</h5>
+    @Html.TextBox("tag")<p />
+    <h5>Price</h5>
+    @Html.TextBox("prc", null, new { type = "number" })<p />
+    @Html.DropDownList("album", new List<SelectListItem> { new SelectListItem { Text = "Акварель", Value = "akvarel" }, new SelectListItem { Text = "Батик", Value = "batik" }, new SelectListItem { Text = "Пастель", Value = "pastel" }, new SelectListItem { Text = "Живопись", Value = "zivopis" } })
     <button type="submit" class="btn btn-default">Применить</button>
-}
+    }
