Refactoring: updating the views

--- a/GalleryMVC_With_Auth/Views/Images/Painting.cshtml
+++ b/GalleryMVC_With_Auth/Views/Images/Painting.cshtml
@@ -22,7 +22,7 @@
             <figure class="effect-milo">
                 <img src="@p.TmbPath" alt="@p.Category" />
                 <figcaption>
-                    <h2><span>@p.Category</span></h2>
+                    @*<h2><span>@p.Category</span></h2>*@
                     <p style="color: red">Автор - @p.Name.</p>
                     <p style="color: red">Цена - @p.Price$!</p>
                     <a href="@p.Path" title="@p.Name" ></a>
