--- a/GalleryMVC_With_Auth/Views/Shared/_Layout.cshtml
+++ b/GalleryMVC_With_Auth/Views/Shared/_Layout.cshtml
@@ -22,9 +22,8 @@
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Домой", "Index", new { controller = "StartHome" }, new { @class = "home" })</li>
                     <li>@Html.ActionLink("О нас", "About", new { controller = "StartHome" }, new { @class = "about" })</li>
-                    <li>@Html.ActionLink("Контакты", "Contact", new { controller = "StartHome" }, new { @class = "contacts" })</li>
-                    <li>@Html.ActionLink("Логи", "Index", new { controller = "elmah" }, new { style = "font-size: 200%;", @class = "logs" })</li>
-                    <li>@Html.ActionLink("Статистика", "Index", new { controller = "glimpse.axd" }, new { style = "font-size: 200%;", @class = "stat" })</li>
+                    <li>@Html.ActionLink("Контакты", "Contact", new {controller = "StartHome"}, new {@class = "contacts"})</li>
+                    <li>@Html.ActionLink("Админ панель", "Index", new { controller = "AdminPanel" }, new { @class = "admin" })</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
