--- a/GalleryMVC_With_Auth/Views/StartHome/Index.cshtml
+++ b/GalleryMVC_With_Auth/Views/StartHome/Index.cshtml
@@ -48,4 +48,13 @@
         </figcaption>
     </figure>
     <!-- ... -->
+    <figure class="effect-lily">
+        <img src="~/Content/images/icons/7_opt.jpg" alt="img02" />
+        <figcaption>
+            <h2><span>Гуашь</span></h2>
+            <p>Гуашь - яркая мазьня!</p>
+            <a href="~/Images/Gouache">View more</a>
+        </figcaption>
+    </figure>
+    <!-- ... -->
 </div>
