--- a/GalleryMVC_With_Auth/Views/Shared/_Layout.cshtml
+++ b/GalleryMVC_With_Auth/Views/Shared/_Layout.cshtml
@@ -40,9 +40,11 @@
             <hr />
 
         </div>
-        <footer style="background: #2E2E2E; padding: 50px">
-            <p>&copy; @DateTime.Now.Year - ramzzzay@gmail.com</p>
-        </footer>
+    <footer class="footer">
+        <div class="container">
+            <p class="text-muted">&copy; @DateTime.Now.Year - ramzzzay@gmail.com</p>
+        </div>
+    </footer>
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
     @Scripts.Render("~/bundles/magic")
