Refactoring: change images on main menu

--- a/GalleryMVC_With_Auth/Views/StartHome/Index.cshtml
+++ b/GalleryMVC_With_Auth/Views/StartHome/Index.cshtml
@@ -4,7 +4,7 @@
 
 <div class="grid">
     <figure class="effect-lily">
-        <img src="~/Content/images/icons/1_opt.jpg" alt="img01" />
+        <img src="~/Content/images/Painting/kondratuk_alina/tmb/0.thumb.jpg" alt="img01" />
         <figcaption>
             <h2><span>Живопись</span></h2>
             <p>Живопись - это искусство!</p>
@@ -13,7 +13,7 @@
     </figure>
     <!-- ... -->
     <figure class="effect-lily">
-        <img src="~/Content/images/icons/2_opt.jpg" alt="img02" />
+        <img src="~/Content/images/Watercolor/kozlov/tmb/0.thumb.jpg" alt="img00" />
         <figcaption>
             <h2><span>Акварель</span></h2>
             <p>Акварель - тоже вещь!</p>
@@ -22,7 +22,7 @@
     </figure>
     <!-- ... -->
     <figure class="effect-lily">
-        <img src="~/Content/images/icons/3_opt.jpg" alt="img03" />
+        <img src="~/Content/images/Pastel/tmb/0.thumb.jpg" alt="img01" />
         <figcaption>
             <h2><span>Пастель</span></h2>
             <p>Пастель - годнота!</p>
@@ -40,7 +40,7 @@
     </figure>
     <!-- ... -->
     <figure class="effect-lily">
-        <img src="~/Content/images/icons/9_opt.jpg" alt="img02" />
+        <img src="~/Content/images/Batik/tmb/0.thumb.jpg" alt="img02" />
         <figcaption>
             <h2><span>Батик</span></h2>
             <p>Батик - угу, в том числе вещь!</p>
