--- a/GalleryMVC_With_Auth/Views/Images/Watercolor.cshtml
+++ b/GalleryMVC_With_Auth/Views/Images/Watercolor.cshtml
@@ -20,9 +20,9 @@
         @foreach (var p in Model)
         {
             <figure class="effect-milo">
-                <img src="@p.TmbPath" alt="@p.Category" />
+                <img class="lazy" data-original="@p.TmbPath" alt="@p.Category" />
                 <figcaption>
-                    @*<h2><span>@p.Category</span></h2>*@
+                    <h2><span>@p.Category</span></h2>
                     <p style="color: red">Автор - @p.Name.</p>
                     <p style="color: red">Цена - @p.Price$!</p>
                     <a href="@p.Path" title="@p.Name"></a>
@@ -31,3 +31,15 @@
         }
     </div>
 </div>
+
+<script>
+    $(function () {
+        $("img.lazy").lazyload({
+            effect: "fadeIn"
+        });
+    });
+</script>
+
+@section Scripts {
+    @Scripts.Render("~/bundles/galmagic")
+}
