--- a/GalleryMVC_With_Auth/Content/Site.css
+++ b/GalleryMVC_With_Auth/Content/Site.css
@@ -50,8 +50,13 @@ footer {
     color: white;
 }
 
-.navbar-inverse .navbar-nav > li > .admin:hover, .navbar-inverse .navbar-nav > li > .admin:focus {
+.navbar-inverse .navbar-nav > li > .find:hover, .navbar-inverse .navbar-nav > li > .find:focus {
     background-color: #4CA454;
+    color: white;
+}
+
+.navbar-inverse .navbar-nav > li > .admin:hover, .navbar-inverse .navbar-nav > li > .admin:focus {
+    background-color: #D49B00;
     color: white;
 }
 
