Refactoring: remake search to textbox in menu

--- a/GalleryMVC_With_Auth/Views/Shared/_Layout.cshtml
+++ b/GalleryMVC_With_Auth/Views/Shared/_Layout.cshtml
@@ -1,5 +1,4 @@
-﻿@using System
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8"/>
@@ -25,9 +24,14 @@
                 <li>@Html.ActionLink("Домой", "Index", new {controller = "StartHome"}, new {@class = "home"})</li>
                 <li>@Html.ActionLink("О нас", "About", new {controller = "StartHome"}, new {@class = "about"})</li>
                 <li>@Html.ActionLink("Контакты", "Contact", new {controller = "StartHome"}, new {@class = "contacts"})</li>
-                <li>@Html.ActionLink("Поиск", "Find", new { controller = "Images" }, new { @class = "find" })</li>
                 <li>@Html.ActionLink("Админ панель", "Index", new {controller = "AdminPanel"}, new {@class = "admin"})</li>
-            </ul>
+                <li>
+                    @using (Html.BeginForm("Found", "StartHome", FormMethod.Post))
+                {
+                    @Html.TextBox("value")
+                    <button type="submit" class="btn btn-default glyphicon glyphicon-search"></button>
+                    }</li>
+</ul>
             @Html.Partial("_LoginPartial")
         </div>
     </div>
