--- a/GalleryMVC_With_Auth/Views/Shared/_Layout.cshtml
+++ b/GalleryMVC_With_Auth/Views/Shared/_Layout.cshtml
@@ -26,12 +26,20 @@
                 <li>@Html.ActionLink("Контакты", "Contact", new {controller = "StartHome"}, new {@class = "contacts"})</li>
                 <li>@Html.ActionLink("Админ панель", "Index", new {controller = "AdminPanel"}, new {@class = "admin"})</li>
                 <li>
-                    @using (Html.BeginForm("Found", "StartHome", FormMethod.Post))
-                {
-                    @Html.TextBox("value")
-                    <button type="submit" class="btn btn-default glyphicon glyphicon-search"></button>
-                    }</li>
-</ul>
+                    <div class="container">
+                        <div class="row">
+                            @using (Html.BeginForm("Found", "StartHome", FormMethod.Post, new {@class = "search-form"}))
+                            {
+                                <div class="form-group has-feedback">
+                                    <label for="search" class="sr-only">Поиск</label>
+                                    @Html.TextBox("search", "", new {@class = "form-control", Name = "search", id = "search", placeholder = "Поиск"})
+                                    <span class="glyphicon glyphicon-search form-control-feedback"></span>
+                                </div>
+                            }
+                        </div>
+                    </div>
+                </li>
+            </ul>
             @Html.Partial("_LoginPartial")
         </div>
     </div>
