--- a/GalleryMVC_With_Auth/Views/Account/Register.cshtml
+++ b/GalleryMVC_With_Auth/Views/Account/Register.cshtml
@@ -29,14 +29,14 @@
             @Html.PasswordFor(m => m.ConfirmPassword, new {@class = "form-control"})
         </div>
     </div>
-    <!--Select the Role Type for the User-->
+    @*<!--Select the Role Type for the User-->
     <div class="form-group">
         @Html.Label("Select Your User Type", new {@class = "col-md-2 control-label"})
         <div class="col-md-10">
             @Html.DropDownList("Name")
         </div>
     </div>
-    <!--Ends Here-->
+    <!--Ends Here-->*@
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
             <input type="submit" class="btn btn-default" value="Register"/>
