--- a/GalleryMVC_With_Auth/Content/search.css
+++ b/GalleryMVC_With_Auth/Content/search.css
@@ -1,50 +1,59 @@
 ﻿.search-form .form-group {
-  float: right !important;
-  transition: all 0.35s, border-radius 0s;
-  width: 32px;
-  height: 32px;
-  background-color: #fff;
-  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075) inset;
-  border-radius: 25px;
-  border: 1px solid #ccc;
+    background-color: #fff;
+    border: 1px solid #ccc;
+    border-radius: 25px;
+    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075) inset;
+    float: right !important;
+    height: 32px;
+    margin: 10px;
+    transition: all 0.35s, border-radius 0s;
+    width: 32px;
+    background: #333;
+    /*border-width: 2px;*/
+    border: 30px;
 }
+
 .search-form .form-group input.form-control {
-  padding-right: 30px;
-  border: 0 none;
-  background: transparent;
-  box-shadow: none;
-  display:block;
+    background: transparent;
+    border: 0 none;
+    box-shadow: none;
+    display: block;
+    padding-right: 30px;
 }
-.search-form .form-group input.form-control::-webkit-input-placeholder {
-  display: none;
-}
+
+.search-form .form-group input.form-control::-webkit-input-placeholder { display: none; }
+
 .search-form .form-group input.form-control:-moz-placeholder {
-  /* Firefox 18- */
-  display: none;
+    /* Firefox 18- */
+    display: none;
 }
+
 .search-form .form-group input.form-control::-moz-placeholder {
-  /* Firefox 19+ */
-  display: none;
+    /* Firefox 19+ */
+    display: none;
 }
-.search-form .form-group input.form-control:-ms-input-placeholder {
-  display: none;
-}
+
+.search-form .form-group input.form-control:-ms-input-placeholder { display: none; }
+
 .search-form .form-group:hover,
 .search-form .form-group.hover {
-  width: 300px;
-  border-radius: 4px 25px 25px 4px;
+    border-radius: 4px 25px 25px 4px;
+    width: 300px;
 }
+
 .search-form .form-group span.form-control-feedback {
-  position: absolute;
-  top: -1px;
-  right: -2px;
-  z-index: 2;
-  display: block;
-  width: 34px;
-  height: 34px;
-  line-height: 34px;
-  text-align: center;
-  color: #3596e0;
-  left: initial;
-  font-size: 14px;
+    /*color: #3596e0;*/
+    color: #FFFFFF;
+    display: block;
+    font-size: 17px;
+    height: 40px;
+    left: initial;
+    line-height: 34px;
+    position: absolute;
+    right: -2px;
+    text-align: center;
+    width: 34px;
+    z-index: 2;
+    top: 8px;
+    right: 8px;
 }
