--- a/GalleryMVC_With_Auth/Views/Shared/_Layout.cshtml
+++ b/GalleryMVC_With_Auth/Views/Shared/_Layout.cshtml
@@ -28,7 +28,7 @@
                 <li>
                     <div class="container">
                         <div class="row">
-                            @using (Html.BeginForm("Found", "StartHome", FormMethod.Post, new {@class = "search-form"}))
+                            @using (Html.BeginForm("Found", "StartHome", FormMethod.Get, new {@class = "search-form"}))
                             {
                                 <div class="form-group has-feedback">
                                     <label for="search" class="sr-only">Поиск</label>
