--- a/GalleryMVC_With_Auth/Views/Shared/_Layout.cshtml
+++ b/GalleryMVC_With_Auth/Views/Shared/_Layout.cshtml
@@ -1,4 +1,5 @@
-﻿<!DOCTYPE html>
+﻿@using GalleryMVC_With_Auth.Resources
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8"/>
@@ -17,18 +18,18 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            @Html.ActionLink("Галерея", "Index", "StartHome", null, new {@class = "navbar-brand"})
+            @Html.ActionLink("Галерея", Defines.IndexView, Defines.HomeControllerName, null, new {@class = "navbar-brand"})
         </div>
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
-                <li>@Html.ActionLink("Домой", "Index", new {controller = "StartHome"}, new {@class = "home"})</li>
-                <li>@Html.ActionLink("О нас", "About", new {controller = "StartHome"}, new {@class = "about"})</li>
-                <li>@Html.ActionLink("Контакты", "Contact", new {controller = "StartHome"}, new {@class = "contacts"})</li>
-                <li>@Html.ActionLink("Админ панель", "Index", new {controller = "AdminPanel"}, new {@class = "admin"})</li>
+                <li>@Html.ActionLink("Домой", Defines.IndexView, new {controller = Defines.HomeControllerName}, new {@class = "home"})</li>
+                <li>@Html.ActionLink("О нас", "About", new {controller = Defines.HomeControllerName }, new {@class = "about"})</li>
+                <li>@Html.ActionLink("Контакты", "Contact", new {controller = Defines.HomeControllerName }, new {@class = "contacts"})</li>
+                <li>@Html.ActionLink("Админ панель", Defines.IndexView, new {controller = "AdminPanel"}, new {@class = "admin"})</li>
                 <li>
                     <div class="container">
                         <div class="row">
-                            @using (Html.BeginForm("Found", "StartHome", FormMethod.Get, new {@class = "search-form"}))
+                            @using (Html.BeginForm("Found", Defines.HomeControllerName, FormMethod.Get, new {@class = "search-form"}))
                             {
                                 <div class="form-group has-feedback">
                                     <label for="search" class="sr-only">Поиск</label>
