Refactoring: change input text in search to white

--- a/GalleryMVC_With_Auth/Content/search.css
+++ b/GalleryMVC_With_Auth/Content/search.css
@@ -19,6 +19,7 @@
     box-shadow: none;
     display: block;
     padding-right: 30px;
+    color: #ffffff;
 }
 
 .search-form .form-group input.form-control::-webkit-input-placeholder { display: none; }
