--- a/GalleryMVC_With_Auth/Views/Manage/Index.cshtml
+++ b/GalleryMVC_With_Auth/Views/Manage/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@model GalleryMVC_With_Auth.Models.IndexViewModel
+﻿@using GalleryMVC_With_Auth.Resources
+@model GalleryMVC_With_Auth.Models.IndexViewModel
 @{
     ViewBag.Title = "Панель управления учетной записью";
 }
@@ -26,7 +27,7 @@
         <dt>External Logins:</dt>
         <dd>
             @Model.Logins.Count [
-            @Html.ActionLink("Manage", "ManageLogins") ]
+            @Html.ActionLink(Defines.ManageControllerName, Defines.ManageLoginsView) ]
         </dd>
         @*
             Phone Numbers can used as a second factor of verification in a two-factor authentication system.
