Refactoring: html view

--- a/GalleryMVC_With_Auth/Views/Home/Index.cshtml
+++ b/GalleryMVC_With_Auth/Views/Home/Index.cshtml
@@ -9,8 +9,7 @@
         <figure class="effect-lily">
             <img src="@a.ImgPath" alt="img01"/>
             <figcaption>
-                <h2>
-                    <span>@a.Name</span></h2>
+                <h2><span>@a.Name</span></h2>
                 <p>@a.Description</p>
                 <a onclick="location.href = '@Url.Action("Universal", "Images", new {@a.Id})'">Открыть</a>
             </figcaption>
