Refactoring: delete ViewBag.Title from Account views

--- a/GalleryMVC_With_Auth/Views/Account/ExternalLoginFailure.cshtml
+++ b/GalleryMVC_With_Auth/Views/Account/ExternalLoginFailure.cshtml
@@ -1,8 +1,6 @@
-﻿@{
-    ViewBag.Title = "Login Failure";
-}
+﻿
 
 <hgroup>
-    <h2>@ViewBag.Title.</h2>
-    <h3 class="text-danger">Unsuccessful login with service.</h3>
+    <h2>Авторизация не удалась.</h2>
+    <h3 class="text-danger">Безуспешная авторизация с сервисом.</h3>
 </hgroup>
