--- a/GalleryMVC_With_Auth/Views/Account/ResetPassword.cshtml
+++ b/GalleryMVC_With_Auth/Views/Account/ResetPassword.cshtml
@@ -1,9 +1,6 @@
 ﻿@model GalleryMVC_With_Auth.Models.ResetPasswordViewModel
-@{
-    ViewBag.Title = "Reset password";
-}
 
-<h2>@ViewBag.Title.</h2>
+<h2>Сбросить пароль.</h2>
 
 @using (Html.BeginForm("ResetPassword", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
 {
