--- a/GalleryMVC_With_Auth/Views/Account/VerifyCode.cshtml
+++ b/GalleryMVC_With_Auth/Views/Account/VerifyCode.cshtml
@@ -1,9 +1,6 @@
 ﻿@model GalleryMVC_With_Auth.Models.VerifyCodeViewModel
-@{
-    ViewBag.Title = "Verify";
-}
 
-<h2>@ViewBag.Title.</h2>
+<h2>Верификация</h2>
 
 @using (Html.BeginForm("VerifyCode", "Account", new { ReturnUrl = Model.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", role = "form" })) {
     @Html.AntiForgeryToken()
