--- a/GalleryMVC_With_Auth/Views/Account/ConfirmEmail.cshtml
+++ b/GalleryMVC_With_Auth/Views/Account/ConfirmEmail.cshtml
@@ -1,10 +1,7 @@
-﻿@{
-    ViewBag.Title = "Confirm Email";
-}
-
-<h2>@ViewBag.Title.</h2>
+﻿
+<h2>Подтверждение электронной почты.</h2>
 <div>
     <p>
-        Thank you for confirming your email. Please @Html.ActionLink("Click here to Log in", "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink" })
+        Спасибо вам за подтверждение электронной почты. Пожалуйста @Html.ActionLink("Кликните тут что бы авторизироваться", "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink" })
     </p>
 </div>
