--- a/GalleryMVC_With_Auth/Views/Account/ExternalLoginConfirmation.cshtml
+++ b/GalleryMVC_With_Auth/Views/Account/ExternalLoginConfirmation.cshtml
@@ -1,8 +1,6 @@
 ﻿@model GalleryMVC_With_Auth.Models.ExternalLoginConfirmationViewModel
-@{
-    ViewBag.Title = "Register";
-}
-<h2>@ViewBag.Title.</h2>
+
+<h2>Регистрация</h2>
 <h3>Associate your @ViewBag.LoginProvider account.</h3>
 
 @using (Html.BeginForm("ExternalLoginConfirmation", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
