--- a/GalleryMVC_With_Auth/Views/Account/ForgotPassword.cshtml
+++ b/GalleryMVC_With_Auth/Views/Account/ForgotPassword.cshtml
@@ -1,9 +1,6 @@
 ﻿@model GalleryMVC_With_Auth.Models.ForgotPasswordViewModel
-@{
-    ViewBag.Title = "Forgot your password?";
-}
 
-<h2>@ViewBag.Title.</h2>
+<h2>Забыли ваш пароль?</h2>
 
 @using (Html.BeginForm("ForgotPassword", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
 {
