--- a/GalleryMVC_With_Auth/Views/Account/ForgotPasswordConfirmation.cshtml
+++ b/GalleryMVC_With_Auth/Views/Account/ForgotPasswordConfirmation.cshtml
@@ -1,13 +1,10 @@
-﻿@{
-    ViewBag.Title = "Forgot Password Confirmation";
-}
-
+﻿
 <hgroup class="title">
-    <h1>@ViewBag.Title.</h1>
+    <h1>Подтверждение восстановления пароля.</h1>
 </hgroup>
 <div>
     <p>
-        Please check your email to reset your password.
+        Проверьте вашу почту, для сброса пароля.
     </p>
 </div>
 	
