--- a/GalleryMVC_With_Auth/Views/Account/Login.cshtml
+++ b/GalleryMVC_With_Auth/Views/Account/Login.cshtml
@@ -1,10 +1,7 @@
 ﻿@using GalleryMVC_With_Auth.Models
 @model LoginViewModel
-@{
-    ViewBag.Title = "Log in";
-}
 
-<h2>@ViewBag.Title.</h2>
+<h2>Авторизация.</h2>
 <div class="row">
     <div class="col-md-8">
         <section id="loginForm">
