--- a/GalleryMVC_With_Auth/Views/Account/ResetPasswordConfirmation.cshtml
+++ b/GalleryMVC_With_Auth/Views/Account/ResetPasswordConfirmation.cshtml
@@ -1,12 +1,8 @@
-﻿@{
-    ViewBag.Title = "Reset password confirmation";
-}
-
-<hgroup class="title">
-    <h1>@ViewBag.Title.</h1>
+﻿<hgroup class="title">
+    <h1>Подтверждение сброса пароля.</h1>
 </hgroup>
 <div>
     <p>
-        Your password has been reset. Please @Html.ActionLink("click here to log in", "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink" })
+        Ваш пароль был сброшен. Пожалуйста @Html.ActionLink("кликните тут для авторизации", "Login", "Account", null, new {id = "loginLink"})
     </p>
 </div>
