--- a/GalleryMVC_With_Auth/Views/Account/_ExternalLoginsListPartial.cshtml
+++ b/GalleryMVC_With_Auth/Views/Account/_ExternalLoginsListPartial.cshtml
@@ -1,7 +1,7 @@
 ﻿@model GalleryMVC_With_Auth.Models.ExternalLoginListViewModel
 @using Microsoft.Owin.Security
 
-<h4>Use another service to log in.</h4>
+<h4>Использование другого сервиса для авторизации.</h4>
 <hr />
 @{
     var loginProviders = Context.GetOwinContext().Authentication.GetExternalAuthenticationTypes();
