--- a/GalleryMVC_With_Auth/Views/AdminPanel/Upload.cshtml
+++ b/GalleryMVC_With_Auth/Views/AdminPanel/Upload.cshtml
@@ -2,52 +2,51 @@
 @model GalleryMVC_With_Auth.Domain.Abstract.IPicturesRepository
 
 @{
-    ViewBag.Title = "Upload";
-    List<Album> a = ViewBag.alb as List<Album>;
+    var a = ViewBag.alb as List<Album>;
 }
 
-<h2>Upload</h2>
+<h2>Загрузка изображений.</h2>
 
-@using (Html.BeginForm("Upload", "AdminPanel", FormMethod.Post, new { enctype = "multipart/form-data" }))
+@using (Html.BeginForm("Upload", "AdminPanel", FormMethod.Post, new {enctype = "multipart/form-data"}))
 {
     @Html.AntiForgeryToken()
 
-    <input type="file" name="files" id="files" style="width: 100%;" multiple="multiple" accept="image/*"/><p/>
-    @Html.ValidationSummary("", new { @class = "text-danger" })
+    <input type="file" name="files" id="files" style="width: 100%;" multiple="multiple" accept="image/*"/>
+    <p/>
+    @Html.ValidationSummary("", new {@class = "text-danger"})
     <div class="form-group">
-        @Html.LabelFor(m => m.Picture.Name, new { @class = "col-md-2 control-label"})
+        @Html.LabelFor(m => m.Picture.Name, new {@class = "col-md-2 control-label"})
         <div class="col-md-10">
-            @Html.TextBoxFor(m => m.Picture.Name, new { @class = "form-control", Name = "Name", id = "Name" })
+            @Html.TextBoxFor(m => m.Picture.Name, new {@class = "form-control", Name = "Name", id = "Name"})
         </div>
     </div>
     <div class="form-group">
-        @Html.LabelFor(m => m.Picture.Description, new { @class = "col-md-2 control-label" })
+        @Html.LabelFor(m => m.Picture.Description, new {@class = "col-md-2 control-label"})
         <div class="col-md-10">
-            @Html.TextBoxFor(m => m.Picture.Description, new { @class = "form-control", Name = "Description", id = "Description" })
+            @Html.TextBoxFor(m => m.Picture.Description, new {@class = "form-control", Name = "Description", id = "Description"})
         </div>
     </div>
     <div class="form-group">
-        @Html.LabelFor(m => m.Picture.Tag, new { @class = "col-md-2 control-label" })
+        @Html.LabelFor(m => m.Picture.Tag, new {@class = "col-md-2 control-label"})
         <div class="col-md-10">
-            @Html.TextBoxFor(m => m.Picture.Tag, new { @class = "form-control", Name = "Tag", id = "Tag" })
+            @Html.TextBoxFor(m => m.Picture.Tag, new {@class = "form-control", Name = "Tag", id = "Tag"})
         </div>
     </div>
     <div class="form-group">
-        @Html.LabelFor(m => m.Picture.Category, new { @class = "col-md-2 control-label" })
+        @Html.LabelFor(m => m.Picture.Category, new {@class = "col-md-2 control-label"})
         <div class="col-md-10">
-            @Html.TextBoxFor(m => m.Picture.Category, new { @class = "form-control", Name = "Category", id = "Category" })
+            @Html.TextBoxFor(m => m.Picture.Category, new {@class = "form-control", Name = "Category", id = "Category"})
         </div>
     </div>
     <div class="form-group">
-        @Html.LabelFor(m => m.Picture.Price, new { @class = "col-md-2 control-label" })
+        @Html.LabelFor(m => m.Picture.Price, new {@class = "col-md-2 control-label"})
         <div class="col-md-10">
-            @Html.TextBoxFor(m => m.Picture.Price, new { @class = "form-control", Name = "Price", id= "Price" })
+            @Html.TextBoxFor(m => m.Picture.Price, new {@class = "form-control", Name = "Price", id = "Price"})
         </div>
     </div>
-    @*@Html.DropDownList("Albums", new List<SelectListItem> { new SelectListItem { Text = "Акварель", Value = "akvarel" }, new SelectListItem { Text = "Батик", Value = "batik" }, new SelectListItem { Text = "Пастель", Value = "pastel" }, new SelectListItem { Text = "Живопись", Value = "zivopis" } })*@
-    @Html.DropDownListFor(m=>m.Albums,new SelectList(a,"Id","Name",a.First().Id), new {Name = "AlbumId", id= "AlbumId" })
+    @Html.DropDownListFor(m => m.Albums, new SelectList(a, "Id", "Name", a.First().Id), new {Name = "AlbumId", id = "AlbumId"})
     <button type="submit" class="btn btn-default">Применить</button>
-    }
+}
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
