Refactoring: delete ViewBag.Title from Errors views

--- a/GalleryMVC_With_Auth/Views/Errors/BadRequest.cshtml
+++ b/GalleryMVC_With_Auth/Views/Errors/BadRequest.cshtml
@@ -1,8 +1,5 @@
 ﻿@model Exception
-@{
-    ViewBag.Title = "BadRequest";
-}
 
-<h2>BadRequest</h2>
+<h2>Плохой запрос.</h2>
 
 К сожалению кривой был запрос ='(
