Refactoring: post method to get in contacts and remove ViewBag.Title

--- a/GalleryMVC_With_Auth/Views/Home/About.cshtml
+++ b/GalleryMVC_With_Auth/Views/Home/About.cshtml
@@ -1,8 +1,5 @@
-﻿@{
-    ViewBag.Title = "О нас";
-}
-<h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
+﻿
+<h2>О нас.</h2>
 
 <p>Лучше картины на планете, я гарантирую это!</p>
 <p><b>Жанна Воробьева</b> родилась 14 января 1974 г в г.Пинске.
