--- a/GalleryMVC_With_Auth/Views/Home/Found.cshtml
+++ b/GalleryMVC_With_Auth/Views/Home/Found.cshtml
@@ -1,9 +1,6 @@
 ﻿@model IEnumerable<GalleryMVC_With_Auth.Domain.Entities.Picture>
-@{
-    ViewBag.Title = "Поиск";
-}
 
-<h2>@ViewBag.Title</h2>
+<h2>Поиск</h2>
 
 @Html.Partial("_GalleryPartial")
 
